Add map from sensor data image

--- a/teoricas/teorica_07/src/mapping.tex
+++ b/teoricas/teorica_07/src/mapping.tex
@@ -293,5 +293,11 @@
 	\begin{equation*}
 		p(\map | \observation_{1:t}, \state_{1:t}) = \prod_{i} p(\map_{i} | \observation_{1:t}, \state_{1:t})
 	\end{equation*}
+
+   	\begin{figure}[!h]
+    \includegraphics[width=0.3\columnwidth]{./images/map_from_sensor_data.pdf}
+    \end{figure}
+
+    En este caso, utilizaremos sensores de rango, pero necesitamos un sensor que nos diga si una celda está ocupada o libre.
 	
 \end{frame}
