--- a/common/latex_preamble.tex
+++ b/common/latex_preamble.tex
@@ -10,6 +10,8 @@
 \usepackage{graphicx}
 \usepackage{xcolor}
 \usepackage{amsmath} % bmatrix
+\usepackage[makeroom]{cancel} % \cancel to cancel terms in math equations
+\renewcommand{\CancelColor}{\color{red}} % set red color for \cancel command
 \usepackage[caption=false]{subfig} % caption = false elimina la palabra "Figura" del caption
 \usepackage{import} % para el comando import (se usa para pdf_tex)
 \captionsetup[subfigure]{labelformat=empty} % remover el indice del caption de la subfigura
