--- a/teoricas/teorica_07/src/mapping.tex
+++ b/teoricas/teorica_07/src/mapping.tex
@@ -510,6 +510,9 @@ tenemos entonces:
        
        \State \Return $\left\lbrace l_{t,i} \right\rbrace$
    \end{algorithmic}
+    Muy eficente, ya que solo tenemos que hacer sumas!
+\note{Moravec and Elfes propusieron occupancy grid mapping en los 80's. Desarrollado para sensores sonares ruidosos. También llamado Mapping with known poses}
+
 \end{frame}
 
 
