--- a/teoricas/teorica_07/src/bibliography.tex
+++ b/teoricas/teorica_07/src/bibliography.tex
@@ -1,6 +1,12 @@
 \begin{frame}
 	\frametitle{Bibliografía}
-	\nocite{hartley2003multiple}
+   
+    Static state binary Bayes filter
+    Thrun et al.: “Probabilistic Robotics”,
+    Chapter 4.2
+    Occupancy Grid Mapping
+    Thrun et al.: “Probabilistic Robotics”,
+    Chapter 9.1+9.2
 	
 	\printbibliography
 	
