--- a/teoricas/teorica_07/src/mapping.tex
+++ b/teoricas/teorica_07/src/mapping.tex
@@ -495,6 +495,10 @@ tenemos entonces:
     Inversemodelsareoftenusedinsituationswheremeasurementsaremorecomplexthanthebinarystate. Anexampleofsuchasituationistheproblemofestimatingwhetherornotadoorisclosedfromcameraimages. Herethestate is extremely simple, but the space of all measurements is huge. It iseasiertodeviseafunctionthatcalculatesaprobabilityofadoorbeingclosedfromacameraimage,thandescribingthedistributionoverallcameraimagesthatshowacloseddoor. Inotherwords,itiseasiertoimplementaninversethanaforwardsensormodel.
     
     forward measurement model vs inverse measurement model
+    \url{https://www.cs.cmu.edu/~thrun/papers/thrun.occ-journal.pdf}
+    \url{http://robots.stanford.edu/papers/thrun.iros01-occmap.pdf}
+    
+    Forward models describe the physics of the environment, from causes (occupancy) to effects (measurements). They will be denoted $p(\observation | \map)$.
     
 \end{frame}
 
