--- a/tps/tp2/tp2.tex
+++ b/tps/tp2/tp2.tex
@@ -23,7 +23,7 @@
 
 \section{Introducción}
 
-El objetivo del tp es comprender el modelo cinemático y la estimación de pose (posición y orientación) mediante el cálculo de odometría de un robot con ruedas de tracción diferencial que se mueve sobre una superficie plana. Para esta tarea se utilizará ROS2 y el simulador Gazebo.\footnote{Este trabajo práctico está basado en el trabajo práctico del curso Fundamentos de Robótica Móvil del Departamento de Ingeniería Electrónica de la Facultad Regional Córdoba de la Universidad Tecnológica Nacional \url{https://www.profesores.frc.utn.edu.ar/electronica/fundamentosroboticamovil}.}
+El objetivo del TP es comprender el modelo cinemático y la estimación de pose (posición y orientación) mediante el cálculo de odometría de un robot con ruedas de tracción diferencial que se mueve sobre una superficie plana. Para esta tarea se utilizará ROS2 y el simulador Gazebo.\footnote{Este trabajo práctico está basado en el trabajo práctico del curso Fundamentos de Robótica Móvil del Departamento de Ingeniería Electrónica de la Facultad Regional Córdoba de la Universidad Tecnológica Nacional \url{https://www.profesores.frc.utn.edu.ar/electronica/fundamentosroboticamovil}.}
 
 
 \section{Entrega}
@@ -32,12 +32,12 @@ El objetivo del tp es comprender el modelo cinemático y la estimación de pose 
 
     \item En caso de utilizar el framework de \url{https://www.theconstructsim.com} se deberá proveer el link al proyecto.
 
-    \item Además, se deberá entregar un informe realizado en Lyx o latex explicando el trabajo y analizando los resultados obtenidos.
+    \item Además, se deberá entregar un informe realizado en Lyx o \LaTeX\  explicando el trabajo y analizando los resultados obtenidos.
 \end{itemize}
 
 
 \section{Instrucciones de compilación}
-Pasos para trabajar en el simulador Gazebo con el robot TurtleBot3 en ROS Development Studio (ROSDS). Mas información en: \url{https://navigation.ros.org/getting_started/}
+Pasos para trabajar en el simulador Gazebo con el robot TurtleBot3. Mas información en: \url{https://navigation.ros.org/getting_started/}
 
 \begin{enumerate}
 
@@ -96,7 +96,7 @@ ros2 launch nav2_bringup tb3_simulation_launch.py headless:=False
 
 	\item Una vez corriendo, setear la pose inicial del robot desde RViz. Para esto primero presionar el botón ``2D Pose Estimate'' y luego hacer click es la zona donde se encuentra el robot en el mapa. Esto es para que el sistema de localización del robot tenga una semilla inicial de dónde esta. Luego presionar ``Navigaton2 Goal'' y luego hacer click en algún lugar del mapa para indicarle al robot que debe navegar hasta ahí.
 
-	\item Crear un launch que permita lanzar la simulación pero sin un mapa y sin el sistema de localización. Se recomienda crear un nuevo paquete y luego copiar y modificar los archivos \lstinline{tb3_simulation_launch.py} comentando el código relacionado a la localización (\lstinline{slam}) y al mapa (\lstinline{map}); y \lstinline{world_only.model} comentando el código relacionado al modelo del mundo a utilizar.
+	\item Crear un launch que permita lanzar la simulación pero sin un mapa y sin el sistema de localización. Se recomienda copiar y modificar los archivos \lstinline{tb3_simulation_launch.py} comentando el código relacionado a la localización (\lstinline{slam}) y al mapa (\lstinline{map}); y \lstinline{world_only.model} comentando el código relacionado al modelo del mundo a utilizar. Entre otros cambios, en el archivo launch deberá modificar el path al world modificado.
 
 	\item Una vez teniendo el robot corriendo en un mundo sin obstáculos y sin un sistema de localización, enviar comandos de velocidad para mover el robot:
 
@@ -104,7 +104,7 @@ ros2 launch nav2_bringup tb3_simulation_launch.py headless:=False
 	\item En una nueva terminal o pestaña, ejecutar el comando:
 
 \begin{lstlisting}[style=bash] 
-ros2 topic pub --rate 1 /turtle1/cmd_vel geometry_msgs/msg/Twist "{linear: {x: 0.2, y: 0.0, z: 0.0}, angular: {x: 0.0, y: 0.0, z: 0.2}}"
+ros2 topic pub --rate 1 /cmd_vel geometry_msgs/msg/Twist "{linear: {x: 0.2, y: 0.0, z: 0.0}, angular: {x: 0.0, y: 0.0, z: 0.2}}"
 \end{lstlisting}
 
 	\item Detener el robot fijando la velocidad lineal y angular a cero.
@@ -114,7 +114,7 @@ ros2 topic pub --rate 1 /turtle1/cmd_vel geometry_msgs/msg/Twist "{linear: {x: 0
 
 Puede ejecutarse el mismo comando de teleoperación por teclado
 \begin{lstlisting}[style=bash] 
-ros2 run teleop_twist_keyboard teleop_twist_keyboard.py
+ros2 run teleop_twist_keyboard teleop_twist_keyboard
 \end{lstlisting}
 (ver la información en pantalla y decrementar las velocidades si el moviemiento del robot
 resulta demasiado agresivo)
