--- a/teoricas/teorica_07/src/mapping.tex
+++ b/teoricas/teorica_07/src/mapping.tex
@@ -105,6 +105,14 @@
     
 \end{frame}
 
+\begin{frame}
+    \frametitle{Quadtree y Octree}
+    \note{información extraída de https://youtu.be/v-Rm9TUG9LA}
+    
+    \TODO{Agregar Quadtree y Octree}
+    
+\end{frame}
+
 
 \begin{frame}
     \frametitle{Mapa de Nube de puntos (Point Cloud Map)}
@@ -114,6 +122,14 @@
    	\begin{figure}
     	\includegraphics[width=0.6\columnwidth]{./images/point_cloud_map_bremen_city.png}
     \end{figure}
+    
+\end{frame}
+
+\begin{frame}
+    \frametitle{TSDF}
+    \note{información extraída de https://youtu.be/v-Rm9TUG9LA}
+    
+    \TODO{Agregar TSDF}
     
 \end{frame}
 
@@ -522,6 +538,16 @@ tenemos entonces:
     Muy eficente, ya que solo tenemos que hacer sumas!
 \note{Moravec and Elfes propusieron occupancy grid mapping en los 80's. Desarrollado para sensores sonares ruidosos. También llamado Mapping with known poses}
 
+\end{frame}
+
+\begin{frame}
+    \frametitle{Algoritmo de Mapeo de Ocupación}
+    \note{información extraída de https://youtu.be/v-Rm9TUG9LA}
+    
+   	\begin{figure}[!h]
+        \includegraphics[width=0.5\columnwidth]{./images/inverse_senor_model_range_finder.pdf}
+    \end{figure}
+    
 \end{frame}
 
 
