Hide some slides in computer vision

--- a/teoricas/teorica_05/src/computer_vision.tex
+++ b/teoricas/teorica_05/src/computer_vision.tex
@@ -294,6 +294,7 @@
     
     \footnotesize
     \begin{figure}[!h]
+        \TODO{renombrar punto 3D}
         \centering
         \subfloat[]
         {
@@ -617,6 +618,8 @@
     
 \end{frame}
 
+\ifadditional
+
 \begin{frame}
     \frametitle{Cámara - Modelo Pin-Hole}
     
@@ -705,6 +708,8 @@
 	
 \end{frame}
 
+\fi
+
 \begin{frame}
 	\frametitle{Distorción}
 	
@@ -784,8 +789,9 @@
 
 \begin{frame}
 	\frametitle{Distorción}
-	
 	\footnotesize
+    
+    \TODO{Agregar modelo de distorción aplicado en: https://boofcv.org/index.php?title=Tutorial\_Camera\_Calibration}
 	
 	Finalmente, la corrección se puede representar en coordenadas de píxeles como
 	\begin{equation*}
@@ -890,6 +896,31 @@
 		\includegraphics[width=\textwidth]{./images/stereo_matches.pdf}
 	\end{figure}
 	
+\end{frame}
+
+
+\begin{frame}
+    \frametitle{Cámara estéreo: Rectificación }
+    \footnotesize
+    
+    \TODO{agregar cámaras rectificadas}
+   
+\end{frame}
+
+\begin{frame}
+    \frametitle{Cámara estéreo: Triangulación }
+    \footnotesize
+    
+    \TODO{agregar triangulación}
+    
+\end{frame}
+
+\begin{frame}
+    \frametitle{Cámara estéreo: Calculo de Disparidad }
+    \footnotesize
+    
+    \TODO{agregar disparidad}
+    
 \end{frame}
 
 
@@ -1053,6 +1084,7 @@
 	\frametitle{Calibración de cámara}
 	\footnotesize
 	
+    \TODO{Clase Calibración por Cyrill Stachniss: \url{https://www.youtube.com/watch?v=-9He7Nu3u8s}}
 	
 \end{frame}
 
