--- a/common/beamer_preamble.tex
+++ b/common/beamer_preamble.tex
@@ -13,3 +13,9 @@
 \setbeamertemplate{caption}{\raggedright\insertcaption\par} % elimina la palabra "Figura" del caption
 
 \usepackage[overridenote]{pdfpc} % requires to download manually pdfpc.sty package from https://www.ctan.org/pkg/pdfpc
+
+
+% HOW TO SHOW ADDITIONAL SLIDES%
+\newif\ifadditional % conditional to show additional slides
+%\additionaltrue   % uncomment to show additional slides
+\additionalfalse % uncomment to show without additional slides
