--- a/teoricas/teorica_09/slides.tex
+++ b/teoricas/teorica_09/slides.tex
@@ -15,6 +15,10 @@
 % add math preamble
 \input{../../common/math_preamble}
 
+% add bibliography resource
+\renewcommand*{\bibfont}{\footnotesize} % change bibliograhy size
+\bibliography{../../common/bibliography.bib}
+
 \title{Localización}
 \author{}
 \institute{Universidad Nacional de Rosario}
