--- a/teoricas/teorica_05/src/computer_vision.tex
+++ b/teoricas/teorica_05/src/computer_vision.tex
@@ -929,8 +929,10 @@
 \begin{frame}
 	\frametitle{Reconstrucción 3D: cámara estéreo}
 	
+	\TODO{fusionar esta slide con la anterior}
+	
 	\begin{figure}[!h]
-		\includegraphics[width=0.8\textwidth]{images/stereo_triangulation2.png}
+		\includegraphics[width=0.6\textwidth]{images/stereo_triangulation2.png}
 	\end{figure}
 	
 	\begin{equation*}
@@ -941,6 +943,7 @@
 
 \begin{frame}
 	\frametitle{Disparidad}
+	\TODO{vectorizar imagenes}
 	
 	\begin{figure}[!h]
 		\includegraphics[width=0.7\textwidth]{images/disparity.png}
