Improve computer vision images

--- a/teoricas/teorica_02/src/kinematics.tex
+++ b/teoricas/teorica_02/src/kinematics.tex
@@ -179,3 +179,11 @@
         \omega_{2} = \dfrac{-r\dot{\varphi_{2}}}{2l}
     \end{equation*}
 \end{frame}
+
+\begin{frame}
+    \frametitle{Cinemática de un robot diferencial}
+    
+    \TODO{Agregar ICC info para el TP2. Obtenerla de: \url{https://www.cs.columbia.edu/~allen/F17/NOTES/icckinematics.pdf}}
+    
+
+\end{frame}
