--- a/tps/tp2/tp2.tex
+++ b/tps/tp2/tp2.tex
@@ -67,13 +67,7 @@ Instalar los paquetes de Turtlebot 3
 	sudo apt install ros-humble-turtlebot3*
 \end{lstlisting}
 
-	\item Descargar y descomprimir el script \lstinline[style=bash]{dump_odom.py}:
-	
-\begin{lstlisting}[style=bash] 
-wget http://www.profesores.frc.utn.edu.ar/electronica/fundamentosroboticamovil/\
-pub/file/2022/dump_odom.tar.gz
-tar -xzvf dump_odom.tar.gz
-\end{lstlisting}
+	\item Incorporar el script \lstinline[style=bash]{dump_odom.py} provisto por la cátedra
 	
 \end{enumerate}
 
